# dao-contracts

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  Odra.toml  README.md  SECURITY.md  TODO.md  justfile  run-e2e-tests.sh  rustfmt.toml
contracts/: Cargo.toml
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
contracts/resources/: reputation_contract_schema.yaml
contracts/src/: lib.rs  reputation.rs  variable.rs
contracts/variable/: Cargo.toml
contracts/variable/src/: lib.rs
cucumber-runner/: Cargo.toml
cucumber-runner/src/: events.rs  lib.rs
cucumber-runner/tests/: test_counter.rs
dao/: CHANGELOG.md  Cargo.toml  README.md
dao-client/: Cargo.toml  README.md  deployed_contracts.toml
dao-client/src/: actions.rs  cli.rs  dao_snapshot.rs  deployed_contracts_toml.rs  error.rs  lib.rs  variables.rs
dao-contracts/: Cargo.toml
dao-contracts-schemas/: Cargo.toml
dao-contracts-schemas/src/: lib.rs
dao-contracts/src/: action.rs  admin.rs  bid_escrow.rs  cspr_redistribution.rs  dao_nft.rs  ids.rs  kyc_nft.rs  kyc_voter.rs  lib.rs  onboarding.rs  onboarding_nft.rs  onboarding_request.rs  onboarding_voter.rs  rate_provider.rs  refs.rs  repo_voter.rs  reputation.rs  reputation_voter.rs  simple_voter.rs  slashing_voter.rs  va_nft.rs  variable_repository.rs
dao-contracts/src/bid/: bid.rs  events.rs  job.rs  job_offer.rs  mod.rs  types.rs
dao-contracts/src/bid_escrow/: bid.rs  bid_engine.rs  events.rs  job.rs  job_engine.rs  job_offer.rs  storage.rs  types.rs
dao-contracts/src/builder/: configuration_builder.rs  dao_configuration_builder.rs  mod.rs  voting_configuration_builder.rs
dao-contracts/src/config/: builder.rs  configuration.rs  dao_configuration.rs  mod.rs  voting_configuration.rs
dao-contracts/src/dao/: configuration.rs
dao-contracts/src/escrow/: bid.rs  bid_engine.rs  bidding.rs  events.rs  job.rs  job_engine.rs  job_offer.rs  mod.rs  onboarding.rs  redistribution.rs  storage.rs
dao-contracts/src/mocks/: mock_owner.rs  mock_repository.rs  mock_staking.rs  mock_token.rs  mock_voter.rs  mock_whitelist.rs  mod.rs
dao-contracts/src/onboarding_request/: request.rs  voting.rs
dao-contracts/src/proxy/: mod.rs  reputation_proxy.rs  variable_repo_proxy.rs
dao-contracts/src/reputation/: agg.rs  balances.rs  mod.rs  passive_rep.rs  stakes.rs  token.rs
dao-contracts/src/rules/: mod.rs
dao-contracts/src/voting/: ballot.rs  cspr_redistribution.rs  governance_voting.rs  ids.rs  kyc.rs  kyc_info.rs  mod.rs  onboarding.rs  onboarding_info.rs  refs.rs  types.rs  vote.rs  voting_engine.rs
dao-contracts/tests/: governance_voting_common.rs  test_admin.rs  test_balance.rs  test_bid_escrow.rs  test_crdao.rs  test_gherkin_bid_escrow.rs  test_gherkin_reputation_token.rs  test_governance_results.rs  test_governance_voting.rs  test_kyc.rs  test_kyc_voter.rs  test_onboarding_voter.rs  test_owner.rs  test_ownership.rs  test_rate_provider.rs  test_repo_voter.rs  test_reputation.rs  test_reputation_voter.rs  test_simple_voter.rs  test_slashing.rs  test_utils.rs  test_va.rs  test_variable_repository.rs  test_variables.rs  test_voting.rs  units.rs
dao-contracts/tests/common/: config.rs  helpers.rs  kyc.rs  mod.rs
dao-contracts/tests/contracts/: mod.rs
dao-contracts/tests/modules/: mod.rs  test_governance_voting.rs  test_owner.rs  test_repository.rs  test_staking.rs  test_token.rs  test_whitelist.rs
dao-contracts/tests/steps/: balances.rs  bid_escrow.rs  common.rs  events.rs  kyc.rs  mod.rs  ownership.rs  setup.rs  slashing.rs  va.rs  variables.rs  voting.rs
dao-erc20/: Cargo.toml
dao-erc20/src/: erc20.rs  lib.rs
dao-erc20/tests/: test_erc20.rs
dao-erc20/wasm/: erc_20.wasm  getter_proxy.wasm
dao-erc721/: Cargo.toml
dao-erc721/src/: core.rs  erc721.rs  events.rs  lib.rs  receiver.rs  types.rs
dao-erc721/src/extensions/: burnable.rs  metadata.rs  mintable.rs  mod.rs
dao-erc721/tests/: test_erc721.rs  test_erc721_spec.rs
dao-macros/: Cargo.toml
dao-macros/sample-contract/: Cargo.toml
dao-macros/sample-contract/src/: casper_contract.rs  contract.rs  lib.rs
dao-macros/src/: caller.rs  casper_contract.rs  casper_contract_interface.rs  contract.rs  contract_test.rs  event.rs  instance.rs  lib.rs  parser.rs  rule.rs  serialization.rs
dao-macros/src/contract/: caller.rs  contract_bin.rs  mod.rs  (+5 more)
dao-macros/tests/: expand_tests.rs
dao-modules/: Cargo.toml
dao-modules/src/: access_control.rs  governance_voting.rs  lib.rs  owner.rs  repository.rs  sequence.rs  staking.rs  token.rs  whitelist.rs
dao-utils/: Cargo.toml
dao-utils/sample-contract/: Cargo.toml
dao-utils/src/: casper_env.rs  conversions.rs  cspr.rs  cspr_rate.rs  definitions.rs  events.rs  ids.rs  instance.rs  lib.rs  math.rs  test_contract.rs  test_env.rs  transfer.rs
dao-utils/tests/: 02-contract-impl.rs  03-create-caller.rs  04-entry-points.rs  06-contract-test-interface.rs
dao/src/: lib.rs
dao/tests/: test_admin.rs  test_bid_escrow.rs  test_kyc.rs  test_ownership.rs  test_rate_provider.rs  test_slashing.rs  test_va.rs  test_variables.rs  test_voting.rs
erc20/: Cargo.toml
erc20/src/: bin.rs  error.rs  lib.rs  tests.rs
macros/: Cargo.toml
macros/src/: caller.rs  casper_contract.rs  casper_contract_interface.rs  contract.rs  contract_impl.rs  contract_interface.rs  contract_test.rs  entry_points.rs  event.rs  lib.rs  parser.rs  rules.rs
macros/tests/: 01-parse.rs  02-contract-impl.rs  03-create-caller.rs  04-entry-points.rs  05-caller-impl-interface.rs  06-contract-test-interface.rs  progress.rs
test-utils/: Cargo.toml
test-utils/src/: test_env.rs
tests/: Cargo.toml  lib.rs  reputation.rs  variable.rs
tests-utils/: Cargo.toml
tests-utils/src/: test_env.rs
tests/src/: lib.rs  reputation_tests.rs  test_reputation.rs  variable_tests.rs
utils/: Cargo.toml
utils/src/: address.rs  bytes.rs  casper_env.rs  consts.rs  error.rs  events.rs  lib.rs  list.rs  owner.rs  repository.rs  staking.rs  test_env.rs  token.rs  whitelist.rs
utils/tests/: 01-parse.rs  05-caller-impl-interface.rs  macro_test.rs
(+1738 files in other folders)
