[workspace]
members = [
    "dao",
    "macros",
]

exclude = [
    "cucumber-runner",
    "dao-client"
]

[workspace.dependencies]
odra = { path = "../odra/odra/core", default-features = false }
odra-modules = { path = "../odra/odra/modules", default-features = false }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
