[workspace]
members = [
    "dao",
    "macros",
]

exclude = [
    "cucumber-runner",
    "dao-client"
]

[workspace.dependencies]
odra = { version = "0.5.0", default-features = false }
odra-modules = { version = "0.5.0", default-features = false }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
