[package]
name = "casper-dao-contracts"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.6"
casper-dao-utils = { path = "../utils" }

[[bin]]
name = "reputation_contract"
path = "bin/reputation_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "variable_repository_contract"
path = "bin/variable_repository.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

[features]
default = [ "casper-contract/default", "casper-contract/std", "casper-contract/test-support" ]
test-support = [ "casper-dao-utils/test-support", "casper-contract/test-support" ]