[package]
name = "dao-contracts-schemas"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-types = "1.5.0"
casper-dao-utils = { path = "../dao-utils", default-features = false, features = [ "serde" ] }
casper-dao-contracts = { path = "../dao-contracts", default-features = false }
casper-dao-modules = { path = "../dao-modules", default-features = false }
casper-dao-erc721 = { path = "../dao-erc721", default-features = false }
serde = "1.0"
serde_json = "1.0"
convert_case = "0.6"
hex = "0.4"
blake2 = "0.9"

[[bin]]
name = "update-schemas"
path = "bin/update_schemas.rs"

[[bin]]
name = "event-parser"
path = "bin/event_parser.rs"
