[package]
name = "casper-dao-contracts"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-types = "1.4.6"
casper-dao-utils = { path = "../dao-utils", default-features = false }
casper-dao-modules = { path = "../dao-modules", default-features = false }
casper-dao-erc721 = { path = "../dao-erc721", default-features = false }
delegate = "0.6.2"

[dev-dependencies]
speculate = "0.1.2"
test-case = "2.0.2"

[[bin]]
name = "reputation_contract"
path = "bin/reputation_contract.rs"
bench = false
doctest = false
test = false
doc = false

[[bin]]
name = "variable_repository_contract"
path = "bin/variable_repository_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "repo_voter_contract"
path = "bin/repo_voter_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "dao_owned_nft_contract"
path = "bin/dao_owned_nft_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "onboarding_voter_contract"
path = "bin/onboarding_voter_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "admin_contract"
path = "bin/admin_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "mock_voter_contract"
path = "bin/mocks/mock_voter_contract.rs"
bench = false
doctest = false
test = false

[features]
default = [ "test-support" ]
test-support = [ "casper-dao-utils/test-support", "casper-dao-modules/test-support" ]
wasm = [ "casper-dao-utils/wasm", "casper-dao-modules/wasm" ]
