[package]
name = "casper-dao-contracts"
version = "0.2.0"
edition = "2021"

[dependencies]
casper-types = "1.5.0"
casper-dao-utils = { path = "../dao-utils", default-features = false }
casper-dao-modules = { path = "../dao-modules", default-features = false }
casper-dao-erc721 = { path = "../dao-erc721", default-features = false }
delegate = "0.6.2"

[dev-dependencies]
cucumber = "0.15.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "time"] }
speculate = "0.1.2"
test-case = "2.0.2"

[[test]]
name = "test_gherkin_bid_escrow"
harness = false  # allows Cucumber to print output instead of libtest
required-features = ["test-support"]

#[[test]]
#name = "test_gherkin_reputation_token"
#harness = false  # allows Cucumber to print output instead of libtest
#required-features = ["test-support"]

#[[test]]
#name = "test_balance"
#required-features = ["test-support"]

[[bin]]
name = "reputation_contract"
path = "bin/reputation_contract.rs"
bench = false
doctest = false
test = false
doc = false

[[bin]]
name = "reputation_voter_contract"
path = "bin/reputation_voter_contract.rs"
bench = false
doctest = false
test = false
doc = false

[[bin]]
name = "variable_repository_contract"
path = "bin/variable_repository_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "simple_voter_contract"
path = "bin/simple_voter_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "repo_voter_contract"
path = "bin/repo_voter_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "va_nft_contract"
path = "bin/va_nft_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "kyc_nft_contract"
path = "bin/kyc_nft_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "onboarding_voter_contract"
path = "bin/onboarding_voter_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "kyc_voter_contract"
path = "bin/kyc_voter_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "admin_contract"
path = "bin/admin_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "mock_voter_contract"
path = "bin/mocks/mock_voter_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "bid_escrow_contract"
path = "bin/bid_escrow_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "pick_bid"
path = "bin/pick_bid.rs"
bench = false
doctest = false
test = false

[features]
default = [ "test-support" ]
test-support = [ "casper-dao-utils/test-support", "casper-dao-modules/test-support" ]
wasm = [ "casper-dao-utils/wasm", "casper-dao-modules/wasm" ]
