[package]
name = "casper-dao-contracts"
version = "0.2.0"
edition = "2021"

[dependencies]
casper-types = "1.5.0"
casper-dao-utils = { path = "../dao-utils", default-features = false }
casper-dao-modules = { path = "../dao-modules", default-features = false }
casper-dao-erc721 = { path = "../dao-erc721", default-features = false }
delegate = "0.6.2"

[dev-dependencies]
cucumber = "0.15.0"
speculate = "0.1.2"
test-case = "2.0.2"
futures = "0.3.5"
derive_more = "0.99.17"

[[test]]
name = "test_admin"
harness = false  # allows Cucumber to print output instead of libtest
required-features = ["test-support"]

[[test]]
name = "test_bid_escrow"
harness = false  # allows Cucumber to print output instead of libtest
required-features = ["test-support"]

[[test]]
name = "test_slashing"
harness = false  # allows Cucumber to print output instead of libtest
required-features = ["test-support"]

[[test]]
name = "test_variables"
harness = false  # allows Cucumber to print output instead of libtest
required-features = ["test-support"]

[[test]]
name = "test_kyc"
harness = false  # allows Cucumber to print output instead of libtest
required-features = ["test-support"]

[[test]]
name = "test_va"
harness = false  # allows Cucumber to print output instead of libtest
required-features = ["test-support"]

[[test]]
name = "test_ownership"
harness = false  # allows Cucumber to print output instead of libtest
required-features = ["test-support"]

[[test]]
name = "test_voting"
harness = false  # allows Cucumber to print output instead of libtest
required-features = ["test-support"]

[[bin]]
name = "reputation_contract"
path = "bin/reputation_contract.rs"
bench = false
doctest = false
test = false
doc = false

[[bin]]
name = "reputation_voter_contract"
path = "bin/reputation_voter_contract.rs"
bench = false
doctest = false
test = false
doc = false

[[bin]]
name = "variable_repository_contract"
path = "bin/variable_repository_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "simple_voter_contract"
path = "bin/simple_voter_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "repo_voter_contract"
path = "bin/repo_voter_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "va_nft_contract"
path = "bin/va_nft_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "kyc_nft_contract"
path = "bin/kyc_nft_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "kyc_voter_contract"
path = "bin/kyc_voter_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "admin_contract"
path = "bin/admin_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "slashing_voter_contract"
path = "bin/slashing_voter_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "mock_voter_contract"
path = "bin/mocks/mock_voter_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "bid_escrow_contract"
path = "bin/bid_escrow_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "pick_bid"
path = "bin/pick_bid.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "submit_bid"
path = "bin/submit_bid.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "submit_job_proof_during_grace_period"
path = "bin/submit_job_proof_during_grace_period.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "submit_onboarding_request"
path = "bin/submit_onboarding_request.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "post_job_offer"
path = "bin/post_job_offer.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "cspr_rate_provider_contract"
path = "bin/cspr_rate_provider.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "dao_ids_contract"
path = "bin/dao_ids.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "onboarding_request_contract"
path = "bin/onboarding_request.rs"
bench = false
doctest = false
test = false

[features]
default = [ "test-support" ]
test-support = [ "casper-dao-utils/test-support", "casper-dao-modules/test-support" ]
wasm = [ "casper-dao-utils/wasm", "casper-dao-modules/wasm" ]
