[package]
name = "casper-dao-erc20"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-types = "1.4.6"
casper-dao-utils = { path = "../dao-utils" }

[[bin]]
name = "erc_20"
path = "src/bin.rs"
bench = false
doctest = false
test = false
doc = false

[[test]]
name = "erc20"
path = "src/tests.rs"
harness = true

[features]
default = [ "test-support" ]
test-support = [ "casper-dao-utils/test-support" ]