[package]
name = "casper-dao-erc20"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-types = "1.4.6"
casper-dao-utils = { path = "../dao-utils", default-features = false }

[[bin]]
name = "erc_20"
path = "bin/erc20_contract.rs"
bench = false
doctest = false
test = false
doc = false

[[test]]
name = "test-erc20"
path = "tests/test_erc20.rs"
harness = true

[features]
default = [ "test-support" ]
test-support = [ "casper-dao-utils/test-support" ]
wasm = [ "casper-dao-utils/wasm" ]