[package]
name = "casper-dao-erc721"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-types = "1.4.6"
casper-dao-utils = { path = "../dao-utils", default-features = false }
delegate = "0.6.2"
[dev-dependencies]
speculate = "0.1.2"
test-case = "2.0.2"

[[bin]]
name = "erc_721"
path = "bin/erc721_contract.rs"
bench = false
doctest = false
test = false
doc = false

[[bin]]
name = "mock_erc_721_receiver"
path = "bin/mock/erc721_receiver_contract.rs"
bench = false
doctest = false
test = false
doc = false

[[bin]]
name = "mock_erc_721_non_receiver"
path = "bin/mock/non_receiver_contract.rs"
bench = false
doctest = false
test = false
doc = false

[features]
default = [ "test-support" ]
test-support = [ "casper-dao-utils/test-support" ]
wasm = [ "casper-dao-utils/wasm" ]
