[package]
name = "casper-dao-modules"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-dao-utils = { path = "../dao-utils", default-features = false }
casper-event-standard = { workspace = true }
casper-types = { workspace = true }
num-traits = "0.2.15"

[features]
default = [ "test-support" ]
test-support = [ "casper-dao-utils/test-support" ]
wasm = [ "casper-dao-utils/wasm" ]