[package]
name = "casper-dao-utils"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = { version = "1.4.3", default-features = false }
casper-types = "1.4.6"
base64 = "0.13.0"
lazy_static = "1.4.0"
casper-dao-macros = { path = "../dao-macros" }
casper-engine-test-support = { version = "2.0.3", features = ["test-support"], optional = true }
casper-execution-engine = { version = "1.4.4", optional = true }
hex = "0.4.3"
blake2 = { version = "0.9.0", default-features = false }

[dev-dependencies]
trybuild = "1.0"
pretty_assertions = "1.2.0"

[[test]]
name = "tests"
path = "tests/macro_test.rs"

[[bin]]
name = "getter_proxy"
path = "bin/getter_proxy.rs"
bench = false
doctest = false
test = false

[features]
default = [ "test-support" ]
test-support = [ 
    "casper-engine-test-support", 
    "casper-execution-engine", 
    "casper-contract/test-support"
]
wasm = [ "casper-contract/default", "casper-contract/std" ]