[package]
name = "casper-dao-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = { version = "1.4.4", default-features = false, features = ["test-support"] }
casper-types = { workspace = true }
casper-event-standard = { workspace = true }
casper-dao-macros = { path = "../dao-macros" }
casper-engine-test-support = { version = "3.1.0", features = ["test-support"], optional = true }
casper-execution-engine = { version = "3.1.0", optional = true }
lazy_static = "1.4.0"
hex = "0.4.3"
blake2 = { version = "0.9.0", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }

[[bin]]
name = "getter_proxy"
path = "bin/getter_proxy.rs"
bench = false
doctest = false
test = false

[features]
default = [ "test-support" ]
test-support = [ 
    "casper-engine-test-support", 
    "casper-execution-engine", 
    "casper-contract/test-support"
]
wasm = [ "casper-contract/default", "casper-contract/std" ]
serde = [ "dep:serde", "casper-event-standard/serde" ]