[package]
name = "erc20"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.6"
casper-dao-utils = { path = "../utils" }

[[bin]]
name = "erc20"
path = "src/lib.rs"
bench = false
doctest = false
test = false
doc = false

[profile.release]
codegen-units = 1
lto = true

[features]
default = [ "casper-contract/default", "casper-contract/std", "casper-contract/test-support" ]
test-support = [ "casper-dao-utils/test-support", "casper-contract/test-support" ]