[package]
name = "erc20"
version = "0.1.0"
edition = "2018"


[dependencies]
casper-contract = { version = "1.4.3", default-features = false, optional = true }
casper-types = "1.4.6"
casper-dao-utils = { path = "../utils" }

[[bin]]
name = "erc20_contract"
path = "src/bin.rs"
bench = false
doctest = false
test = false
doc = false

[[test]]
name = "erc20"
path = "src/tests.rs"
harness = true

[features]
default = [ "casper-contract/default", "casper-contract/std", "casper-contract/test-support", "test-support" ]
test-support = [ "casper-dao-utils/test-support", "casper-contract/test-support" ]
as-wasm = ["casper-contract/default", "casper-contract/std", "casper-contract/test-support" ]