[package]
name = "casper-dao-macros"
version = "0.1.0"
edition = "2018"

[dependencies]
proc-macro2 = "1.0.33"
quote = "1.0.15"
syn =  { version = "1.0.86", features = ["full"] }
convert_case = "0.5.0"

[dev-dependencies]
trybuild = "1.0"
casper-contract = "1.4.3"
casper-types = "1.4.6"
casper-dao-utils = { path = "../utils", features = ["test-support"] }

[[test]]
name = "tests"
path = "tests/progress.rs"

[lib]
proc-macro = true