[package]
name = "tests"
version = "0.1.0"
edition = "2018"
autotests = false
autobenches = false

[dev-dependencies]
casper-types = "1.4.6"
casper-dao-contracts = { path = "../contracts", default-features = false, features = [ "test-support" ] }
casper-dao-utils = { path = "../utils", features = [ "test-support" ]}

[[test]]
name = "integration"
path = "src/integration_tests.rs"
harness = true
