[package]
name = "reputation-contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = { version = "1.4.3", default-features = false }
casper-types = "1.4.6"
tests-utils = {path = "../../tests-utils", optional = true }

[[bin]]
name = "reputation_contract"
path = "bin/reputation_contract.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

[features]
default = [ "casper-contract/default", "casper-contract/std" ]
test-support = [ "tests-utils" ]