[package]
name = "reputation-contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.6"
utils = { path = "../../utils" }

[[bin]]
name = "reputation_contract"
path = "bin/reputation_contract.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

[features]
default = [ "casper-contract/default", "casper-contract/std", "casper-contract/test-support" ]
test-support = [ "utils/test-support", "casper-contract/test-support" ]